@@ -13,6 +13,8 @@ Version 2.1.9
    - Bugfix: Detection of FAM/GAMIN in configure (thanks to Jan Blunck for
         providing a patch)
    - Added Jan Blunck to contributors
+   - Backport (from gnubiff 2.2.0 CVS) of FAM bugfixes and ability to disable
+        FAM
 	
 Version 2.1.8		2005-12-19 22:01
  * Robert Sowada
